# bili-auto

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  bili_auto.py  downloader.py  main.py  pyproject.toml
logs/: downloader.log.2026-05-18  downloader.log.2026-05-21
scripts/: check_up_new_video.sh  download.sh  keep_alive.sh  scan_fav.sh  tools.py  upload.sh  utils.py
src/bili_auto/: api.py  bilibili_api.py  config.py  downloader.py  redis_client.py  templates.py  utils.py
