[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-auto"
version = "0.1.8"
description = "Bilibili auto-download service: QR login, favorites scanning, async download with Redis queue"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["bilibili", "download", "fastapi", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastapi",
    "httpx",
    "pillow",
    "python-dotenv",
    "qrcode",
    "redis",
    "tqdm",
    "uvicorn",
]

[project.scripts]
bili-auto = "bili_auto.api:main"
bili-downloader = "bili_auto.downloader:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_auto"]
